[package]
name = "wpgu-run-enviroment"
version = "0.1.0"
edition = "2021"
authors = ["Tiamat-KIT <c1101081@planet.kanazawa-it.ac.jp>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wgpu = { version = "23.0.1", default-features = false, features = [
    "webgpu",
    "wgsl",
] }
gloo = "0.11.0"
pollster = "0.4.0"
wasm-bindgen-futures = "0.4.49"
winit = { version = "0.30.7", features = ["rwh_05"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]
